added prices to house data

--- a/Notebooks/Data Manipulation.ipynb
+++ b/Notebooks/Data Manipulation.ipynb
@@ -575,6 +575,143 @@
    "source": [
     "df_monthly_houses.to_csv('houses_one_month_uninterupted.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import csv\n",
+    "import os\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_json_to_csv(json_file, csv_file):\n",
+    "    with open(json_file, 'r') as file:\n",
+    "        data = json.load(file)\n",
+    "\n",
+    "    if not data or \"Prices\" not in data:\n",
+    "        print(\"Invalid JSON data\")\n",
+    "        return\n",
+    "\n",
+    "    prices = data[\"Prices\"]\n",
+    "\n",
+    "    if not prices or not isinstance(prices, list):\n",
+    "        print(\"Invalid JSON data\")\n",
+    "        return\n",
+    "\n",
+    "    with open(csv_file, 'w', newline='') as file:\n",
+    "        writer = csv.writer(file)\n",
+    "\n",
+    "        if len(prices) == 0:\n",
+    "            print(\"JSON data is empty\")\n",
+    "            return\n",
+    "\n",
+    "        # Write the header row based on the keys of the first object in the JSON data\n",
+    "        header = list(prices[0].keys())\n",
+    "        writer.writerow(header)\n",
+    "\n",
+    "        # Write each object in the JSON data as a row in the CSV file\n",
+    "        for row in prices:\n",
+    "            writer.writerow(row.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_file ='energyprices.json'\n",
+    "csv_file = 'energyprices.csv'\n",
+    "\n",
+    "\n",
+    "convert_json_to_csv(json_file, csv_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_dir = os.getcwd()\n",
+    "parent_dir = os.path.dirname(current_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_timestamp_format(timestamp):\n",
+    "    # Convert timestamp format from 'yyyy-mm-dd HH:MM:SS' to 'yyyy-mm-ddTHH:MM:SSZ'\n",
+    "    date_time = datetime.strptime(timestamp, '%Y-%m-%dT%H:%M:%SZ') \n",
+    "    return date_time.strftime('%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_csv_with_prices(original_csv_file, prices_csv_file, merged_csv_file):\n",
+    "    # Read the original CSV file\n",
+    "    original_data = []\n",
+    "    with open(original_csv_file, 'r') as file:\n",
+    "        reader = csv.reader(file)\n",
+    "        original_header = next(reader)\n",
+    "        original_data = list(reader)\n",
+    "\n",
+    "    # Read the prices CSV file\n",
+    "    prices_data = {}\n",
+    "    with open(prices_csv_file, 'r') as file:\n",
+    "        reader = csv.DictReader(file)\n",
+    "        for row in reader:\n",
+    "            timestamp = convert_timestamp_format(row['readingDate'])  # Use 'readingDate' instead of 'Time'\n",
+    "            price = row['price']\n",
+    "            prices_data[timestamp] = price\n",
+    "\n",
+    "    # Merge the data based on the timestamp\n",
+    "    merged_data = []\n",
+    "    for row in original_data:\n",
+    "        timestamp = row[0]\n",
+    "        if timestamp in prices_data:\n",
+    "            price = prices_data[timestamp]\n",
+    "            merged_data.append(row + [price])\n",
+    "        else:\n",
+    "            merged_data.append(row + [\"\"])\n",
+    "\n",
+    "    # Write the merged data to the new CSV file\n",
+    "    with open(merged_csv_file, 'w', newline='') as file:\n",
+    "        writer = csv.writer(file)\n",
+    "        writer.writerow(original_header + ['Price'])\n",
+    "        writer.writerows(merged_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, 16):\n",
+    "    original_csv_file = os.path.join(parent_dir, 'data', f'house{i}_cons_pred.csv')\n",
+    "    prices_csv_file = 'energyprices.csv'\n",
+    "    merged_csv_file = f'house{i}_cons_pred_price.csv'\n",
+    "\n",
+    "    merge_csv_with_prices(original_csv_file, prices_csv_file, merged_csv_file)"
+   ]
   }
  ],
  "metadata": {
