Preparing for Monte-Carlo Simulation (I changed my mind ugh)

--- a/Notebooks/Data Manipulation.ipynb
+++ b/Notebooks/Data Manipulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,16 +701,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1, 16):\n",
-    "    original_csv_file = os.path.join(parent_dir, 'data', f'house{i}_cons_pred.csv')\n",
-    "    prices_csv_file = 'energyprices.csv'\n",
-    "    merged_csv_file = f'house{i}_cons_pred_price.csv'\n",
+    "original_csv_file = os.path.join(parent_dir, 'data', 'hourly_cons_pred.csv')\n",
+    "prices_csv_file = 'energyprices.csv'\n",
+    "merged_csv_file = 'hourly_cons_pred_price.csv'\n",
+    "merge_csv_with_prices(original_csv_file, prices_csv_file, merged_csv_file)\n",
     "\n",
-    "    merge_csv_with_prices(original_csv_file, prices_csv_file, merged_csv_file)"
+    "# for i in range(1, 16):\n",
+    "#     original_csv_file = os.path.join(parent_dir, 'data', f'house{i}_cons_pred.csv')\n",
+    "#     prices_csv_file = 'energyprices.csv'\n",
+    "#     merged_csv_file = f'house{i}_cons_pred_price.csv'\n",
+    "\n",
+    "#     merge_csv_with_prices(original_csv_file, prices_csv_file, merged_csv_file)"
    ]
   }
  ],
