--- a/Notebooks/Data Prediction.ipynb
+++ b/Notebooks/Data Prediction.ipynb
@@ -1026,6 +1026,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Average prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### We will use House 1 for the prediction modelling\n",
     "\n",
     "The approach for all houses are the same, but the prediction will be run separately for each house to the simulation to validate it."
